# RCNN-Sequential

./: README.md  pyproject.toml  requirements.txt
data/: all_checkinsdict.json  gowalladict.json
deprecated/: actual_fix_len.py  actual_pad_len.py  syntatic_fix_len.py
src/: datamodule.py  hparam.py  main.py  model.py  test.py
srcFI/: datamoduleFI.py  hparamFI.py  mainFI.py  modelFI.py
srcHR/: datamodule.py  datamoduleHR.py  hparam.py  hparamHR.py  main.py  mainHR.py  modelHR.py
